[project]
name = "newspaper-knowledge-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pdf2image>=1.17.0",
    "pillow>=11.0.0",
    "pytesseract>=0.3.13",
    "langchain>=1.3.9",
    "langchain-openai>=1.3.2",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=1.1.2",
    "dotenv>=0.9.9",
    "tqdm>=4.68.2",
    "streamlit>=1.58.0",
    "langchain-classic>=1.0.8",
    "telethon>=1.40.0",
]
